--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <img src="./asserts/voyd.svg" alt="personagem voyd">
                 </li> 
 
-                <li class="personagem" id="zeze" data-nome="Zéze">
+                <li class="personagem" id="zeze" data-nome="Zezé">
                     <span class="tag">1P</span>
                     <img src="./asserts/zeze.svg" alt="personagem zeze">
                 </li> 
